integration with client app zkp